--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,8 +1,8 @@
 name: CI/CD to Azure Container Registry
 
 env:
-  AZURE_CONTAINER_REGISTRY: yourcontainerregistry.azurecr.io
-  AZURE_CONTAINER_REGISTRY_USERNAME: yourcontainerregistry
+  AZURE_CONTAINER_REGISTRY: permanentacr.azurecr.io
+  AZURE_CONTAINER_REGISTRY_USERNAME: permanentacr
   IMAGE_NAME: webapp
 
 on:
